Update API docs loyalty (#164)
