# consumer/src/main/kotlin/com/noljanolja/server/consumer/adapter/core/CoreVideoComment.kt
@@ -1,11 +1,14 @@
 package com.noljanolja.server.consumer.adapter.core
 
 import com.noljanolja.server.consumer.model.VideoComment
+import java.time.Instant
 
 data class CoreVideoComment(
     val id: Long,
     val comment: String,
     val commenter: VideoCommenter,
+    val createdAt: Instant,
+    val updatedAt: Instant,
 ) {
     data class VideoCommenter(
         val name: String,
@@ -19,5 +22,7 @@ fun CoreVideoComment.toConsumerVideoComment() = VideoComment(
     commenter = VideoComment.VideoCommenter(
         name = commenter.name,
         avatar = commenter.avatar,
-    )
+    ),
+    createdAt = createdAt,
+    updatedAt = updatedAt,
 )
