# consumer/src/main/kotlin/com/noljanolja/server/consumer/rest/LoyaltyRouter.kt
@@ -1,0 +1,25 @@
+package com.noljanolja.server.consumer.rest
+
+import org.springframework.context.annotation.Bean
+import org.springframework.context.annotation.Configuration
+import org.springframework.http.MediaType
+import org.springframework.web.reactive.function.server.coRouter
+
+@Configuration
+class LoyaltyRouter(
+    private val loyaltyHandler: LoyaltyHandler,
+) {
+    companion object {
+        const val MEDIA_ROUTE = "/api/v1/loyalty"
+    }
+
+    @Bean
+    fun loyaltyRoutes() = coRouter {
+        (MediaRouter.MEDIA_ROUTE and accept(MediaType.APPLICATION_JSON)).nest {
+            "/me".nest {
+                GET("", loyaltyHandler::getMyMemberInfo)
+                GET("/points", loyaltyHandler::getMyLoyaltyPoints)
+            }
+        }
+    }
+}
