# core/src/main/kotlin/com/noljanolja/server/core/model/VideoComment.kt
@@ -1,9 +1,13 @@
 package com.noljanolja.server.core.model
 
+import java.time.Instant
+
 data class VideoComment(
     val id: Long,
     val comment: String,
     val commenter: VideoCommenter,
+    val createdAt: Instant,
+    val updatedAt: Instant,
 ) {
     data class VideoCommenter(
         val name: String,
