# loyalty/src/main/kotlin/com/noljanolja/server/loyalty/repo/TransactionModel.kt
@@ -31,4 +31,5 @@ fun TransactionModel.toTransaction() = Transaction(
     id = id,
     amount = amount,
     reason = reason,
+    createdAt = createdAt,
 )
